# PyObjects-and-Boost-tutorials

./: .gitignore  README.md  install_requirements.sh
demo/intro_to_cpp/: intro  intro.cpp
demo/intro_to_python/: Intro_Python.ipynb  Untitled0.ipynb  intro.py
demo/using_boost_python_cpp/hello/: CMakeLists.txt  hello.cpp  test.py
demo/using_boost_python_cpp/mathlib/: CMakeLists.txt  compile.sh  mathlib.cpp  test.py
demo/using_pyobjeccts_cpp/: math_framework.cpp  my_math.cc  setup.py  test.py
